tdf#162195: use SwFrame::IsHiddenNow when building index

Before commit 0c96119895b347f8eb5bb89f393351bd3c02b9f1 (tdf#159565
prerequisite: make hidden sections have zero-height frames, 2024-02-15),
the hidden sections were absent from layout, so didn't appear in the
SwTOXBaseSection::Update* functions. Now they are zero-height, but
present, so their visibility must be taken into account explicitly.

Change-Id: I95cc72b383a99e1f65152579c5458e253a3f60ea
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177079
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>